# Netfilter-Firewall

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  init.sh
.github/ISSUE_TEMPLATE/: bug_report.md
core/: CMakeLists.txt  Makefile  OWNERS  constants.h  module.c  test_module.c
core/filter/: CMakeLists.txt  OWNERS  README.md  detection.h  test_emu.c
core/kernel/: CMakeLists.txt  Makefile  README.md  test_module.c
core/kernel/logging/: README.md
core/kernel/messaging/: README.md
core/logging/: OWNERS
gui/: GUI.pro  NetFIlter.pro  OWNERS  README.md  firewall.cpp  firewall.h  firewall.ui  img.qrc  main.cpp  mainwindow.cpp  mainwindow.h  test.ui
